--- a/Backend-KSSMS/vercel.json
+++ b/Backend-KSSMS/vercel.json
@@ -1,15 +1,14 @@
 {
-    "version": 2,
     "builds":[
         {
-            "src":"./src/main.py",
+            "src":"src/main.py",
             "use":"@vercel/python"
         }
     ],
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"./src/main.py"
+            "dest":"src/main.py"
         }
     ]
 }
