--- a/Backend-KSSMS/requirements.txt
+++ b/Backend-KSSMS/requirements.txt
@@ -1,10 +1,28 @@
+anyio==3.7.1
+atomicwrites==1.4.1
+attrs==25.3.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+colorama==0.4.6
+coverage==7.9.2
+dnspython==2.7.0
 fastapi==0.68.0
-pip==25.1.1
+h11==0.12.0
+httpcore==0.13.7
+httpx==0.19.0
+idna==3.10
+iniconfig==2.1.0
+motor==3.6.1
+packaging==25.0
+pluggy==1.6.0
+py==1.11.0
 pydantic==1.10.22
-starlette==0.14.2
-typing_extensions==4.14.1
 pymongo==4.9.2
-pytest==6.2.5                 # Last version fully compatible with Python 3.7+
-pytest-asyncio==0.16.0        # Async support for older pytest
-pytest-cov==2.12.1            # Coverage reporting (latest stable for pytest 6.x)
-httpx==0.19.0                 # Compatible with FastAPI 0.68.0           # Async HTTP client (for FastAPI TestClient)
+pytest==6.2.5
+pytest-asyncio==0.16.0
+pytest-cov==2.12.1
+rfc3986==1.5.0
+sniffio==1.3.1
+starlette==0.14.2
+toml==0.10.2
+typing_extensions==4.14.1
